--- a/index.html
+++ b/index.html
@@ -93,10 +93,19 @@
     display: flex;
   }
 
-  #bldG span:last-child {
+  .cost {
     margin-left: auto;
     display: inline-flex;
     gap: 0.75rem;
+  }
+
+  .cost > span {
+    display: inline-flex;
+    align-items: center;
+  }
+
+  .cost img {
+    height: 75%;
   }
 
   #tskG > div,
