--- a/index.html
+++ b/index.html
@@ -144,6 +144,32 @@
   img {
     filter: drop-shadow(1px 0 #fdfdfd) drop-shadow(-1px 0 #fdfdfd);
   }
+
+  .lock {
+    background: #E62200;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    position: relative;
+    z-index: 2;
+    aspect-ratio: 1 / 1;
+  }
+
+  .Research {
+    position: relative;
+    margin-left: -0.65rem;
+    border: 1px solid black;
+    padding: 0 0.25rem 0 0.75rem;
+    z-index: 1;
+    margin-right: 0.5rem;
+    background: #fdfdfd;
+  }
+
+  .locked .cost {
+    opacity: 0.5;
+  }
   </style>
 </head>
 <body>
