--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
     padding: 1rem;
   }
 
+  #resG > div {
+    display: flex;
+    align-items: center;
+  }
+
   button {
     padding: 0.25rem 0.5rem;
     background: rgb(233, 233, 237);
@@ -63,6 +68,8 @@
   }
 
   .icon {
+    display: inline-flex;
+    align-items: center;
     text-shadow: 1px 0px 1px #fdfdfd, 0px 1px 1px #fdfdfd, 0px -1px 1px #fdfdfd, -1px 0px 1px #fdfdfd
   }
 
@@ -142,7 +149,7 @@
   }
 
   img {
-    filter: drop-shadow(1px 0 #fdfdfd) drop-shadow(-1px 0 #fdfdfd);
+    filter: drop-shadow(1px 0 #fdfdfd) drop-shadow(-1px 0 #fdfdfd) drop-shadow(0 1px #fdfdfd) drop-shadow(0 -1px #fdfdfd);
   }
 
   .lock {
