--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
       <div class="g" id="sG"></div>
       <div class="g" id="iG"></div>
       <div class="g" id="tG"></div>
+      <div class="g" id="mG"></div>
     </div>
     <div id="actG"><h2>Actions</h2></div>
     <div id="bldG"><h2 hidden id="bldT">Buildings</h2></div>
