--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     gap: 0.25rem;
   }
 
+  .g > div[hidden] {
+    display: none;
+  }
+
   #saved {
     position: absolute;
     right: 1.5rem;
