fix tooltip getting in way when moving fast

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     color: #222;
   }
 
-  :is(.tipC:hover, .tipC:focus-visible) .tip {
+  :is(.tipC:hover, .tipC:focus-visible) .tip:not(:hover) {
     visibility: visible;
   }
 
