--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     border: 1px solid black;
     z-index: 2;
     aspect-ratio: 1 / 1;
+    height: 100%;
   }
 
   .Research:not(.icon) {
@@ -148,6 +149,9 @@
     padding: 0 0.25rem 0 0.75rem;
     margin-right: 0.5rem;
     background: #fdfdfd;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.25rem;
   }
 
   #tskP {
